# F411-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  Makefile  flash.jlink
app/Inc/: board_config.h
app/Src/: config.c  main.c
cmake/: arm-none-eabi-gcc.cmake
common/Inc/bsp/: button.h  led.h  rtc.h
common/Inc/core/: pool.h
common/Inc/interface/: interface.h
common/Src/bsp/: button.c  led.c  rtc.c
common/Src/core/: cli.c  fault.c  pool.c  simple-timer.c  uprint.c
drivers/Inc/: driver_gpio.h  driver_i2c.h  driver_systick.h
drivers/Src/: driver_gpio.c  driver_i2c.c  driver_systick.c  driver_uart.c
interface/: CMakeLists.txt
interface/Inc/: interface_defines.h  interface_instances.h
interface/Src/: interface_adc.c  interface_analog.c  interface_comm.c  interface_io.c  interface_pwm.c  interface_timebase.c  protocol_i2c.c  protocol_uart.c
tests/: AllTestRunner.c  Makefile
tests/mocks/: mock_timebase.c  mock_timebase.h
tests/unit/bsp/: test_led.cpp
tests/unit/core/: test_simple_timer.c  test_simple_timer.cpp
tests/unit/shared/: test_pool.c  test_ring_buffer.c
workspaces/: app.code-workspace  app.jdebug
worspaces/: app.code-workspace  app.jdebug  tests.code-workspace
